tests/reference/ast_new-try1-a9a22cf.stderr
syntax error: Token '...' is unexpected here
  --> tests/parser/try1.py:34:6
   |
34 | try: ...
   |      ^^^ 
